cloud/k8s/grafana.yaml
apiVersion: v1
kind: Pod
metadata:
  name: grafana
  namespace: qrce
spec:
  containers:
    - name: grafana
      image: grafana/grafana
