cloud/k8s/prometheus.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus
  namespace: qrce
spec:
  containers:
    - name: prometheus
      image: prom/prometheus
